--- a/01_intro_to_r/exploringData.Rmd
+++ b/01_intro_to_r/exploringData.Rmd
@@ -39,16 +39,16 @@ The dollar sign basically says "go to the data frame that comes before me, and f
 What command would you use to extract just the counts of girls baptized? Try
    it!
    
-```{r bsuxldualklhfikm, exercise = TRUE}
+```{r viewgirls, exercise = TRUE}
 ____$____
 ```
 
-```{r bsuxldualklhfikm-solution}
+```{r viewgirls-solution}
 # solution code
 arbuthnot$girls
 ```
 
-```{r bsuxldualklhfikm-check}
+```{r viewgirls-check}
 # check code
 gradethis::grade_code()
 ```   
@@ -96,18 +96,18 @@ To learn what a function does and its arguments that are available to you, use t
 How would you create a plot that would help you answer the following question:
 Is there an apparent trend in the number of boys baptized over the years? 
 
-```{r uvwytbuptygmgteg, exercise = TRUE}
+```{r plotboys, exercise = TRUE}
 ggplot(data = ___, aes(x = ___, y = ___)) + 
   geom_point()
 ```
 
 
-```{r uvwytbuptygmgteg-solution}
+```{r plotboys-solution}
 ggplot(data = arbuthnot, aes(x =year, y = boys)) + 
   geom_point()
 ```
 
-```{r uvwytbuptygmgteg-check}
+```{r plotboys-check}
 # check code
 gradethis::grade_code()
 ```
@@ -115,16 +115,16 @@ gradethis::grade_code()
 
 What if you wanted a line instead of points?
 
-```{r dbrizoftmfcrxtaa, exercise = TRUE}
+```{r plotboyspoint, exercise = TRUE}
 ggplot(data = ___, aes(x = ___, y = ___)) + ___
 ```
 
-```{r dbrizoftmfcrxtaa-solution}
+```{r plotboyspoint-solution}
 ggplot(data = arbuthnot, aes(x = year, y = boys)) + 
   geom_line()
 ```
 
-```{r dbrizoftmfcrxtaa-check}
+```{r plotboyspoint-check}
 # check code
 gradethis::grade_code()
 ```
@@ -216,23 +216,23 @@ Note that we are using the new `total` variable we created earlier in our calcul
 
 Generate a plot of the proportion of boys born over time. What do you see? 
 
-```{r gamhocknhqyetwzh-setup}
+```{r plotboysprop-setup}
 arbuthnot <- arbuthnot %>% mutate(total = boys + girls) %>%
   mutate(boy_ratio = boys / total)
 ```
 
 
-```{r gamhocknhqyetwzh, exercise = TRUE}
+```{r plotboysprop, exercise = TRUE}
 ggplot(data = ___, aes(x = ___, y = ___)) + 
   geom_line()
 ```
 
-```{r gamhocknhqyetwzh-solution}
+```{r plotboysprop-solution}
 ggplot(data = arbuthnot, aes(x =year, y = boy_ratio)) + 
   geom_line()
 ```
 
-```{r gamhocknhqyetwzh-check}
+```{r plotboysprop-check}
 # check code
 gradethis::grade_code()
 ```
@@ -269,17 +269,17 @@ arbuthnot %>%
 
 What years are included in the `present` data set? 
 
-```{r mnepkpmfycyaglup, exercise = TRUE}
+```{r summarisepresent, exercise = TRUE}
 ___ %>%
   summarise(min = min(___), max = max(___))
 ```
 
-```{r mnepkpmfycyaglup-solution}
+```{r summarisepresent-solution}
 present %>%
   summarise(min = min(year), max = max(year))
 ```
 
-```{r mnepkpmfycyaglup-check}
+```{r summarisepresent-check}
 # check code
 gradethis::grade_code()
 ```
@@ -287,39 +287,39 @@ gradethis::grade_code()
 
 What are the dimensions of the data frame? 
 
-```{r sugtdrmmiufgrtna, exercise = TRUE}
+```{r dimpresent, exercise = TRUE}
 glimpse(___)
 ```
 
-```{r sugtdrmmiufgrtna-solution}
+```{r sdimpresent-solution}
 # solution code
 glimpse(present)
 ```
 
-```{r sugtdrmmiufgrtna-check}
+```{r dimpresent-check}
 # check code
 gradethis::grade_code()
 ```
 
 What are the variable (column) names?
 
-```{r xbsmvzydkxccmsuq, exercise = TRUE}
+```{r colnamespresent, exercise = TRUE}
 names(___)
 ```
 
 
-```{r xbsmvzydkxccmsuq-solution}
+```{r colnamespresent-solution}
 names(present)
 ```
 
-```{r xbsmvzydkxccmsuq-check}
+```{r colnamespresent-check}
 # check code
 gradethis::grade_code()
 ```
 
 How do these counts compare to Arbuthnot's? 
 
-```{r dvyabiubuhojtxtq, exercise = TRUE}
+```{r comparecounts, exercise = TRUE}
 arbuthnot %>%
   summarise(min = min(boys), max = max(boys))
 
@@ -327,7 +327,7 @@ ___ %>%
    summarise(min = min(boys), max = max(boys))
 ```
 
-```{r dvyabiubuhojtxtq-solution}
+```{r comparecounts-solution}
 arbuthnot %>%
   summarise(min = min(boys), max = max(boys))
 
@@ -335,7 +335,7 @@ present %>%
    summarise(min = min(boys), max = max(boys))
 ```
 
-```{r dvyabiubuhojtxtq-check}
+```{r comparecounts-check}
 # check code
 gradethis::grade_code()
 ```
@@ -354,7 +354,7 @@ question("Are they of a similar magnitude?",
 
 Make a plot that displays the proportion of boys born over time.
 
-```{r azqsikgawshsgegl, exercise = TRUE}
+```{r plotboyspresent, exercise = TRUE}
 present <- present %>% mutate(boy_ratio = ___)
 
 ggplot(data = ___, aes(x = ___, y = ___)) + 
@@ -362,14 +362,14 @@ ggplot(data = ___, aes(x = ___, y = ___)) +
 ```
 
 
-```{r azqsikgawshsgegl-solution}
+```{r plotboyspresent-solution}
 present <- present %>% mutate(boy_ratio = boys/(boys+girls))
 
 ggplot(data = present, aes(x = year, y = boy_ratio)) + 
   geom_line()
 ```
 
-```{r azqsikgawshsgegl-check}
+```{r plotboyspresent-check}
 # check code
 gradethis::grade_code()
 ```
@@ -391,7 +391,7 @@ First calculate the totals and save it as a new variable. Then, sort your
 dataset in descending order based on the total column. We can arrange the data 
 in a descending order with another function: `desc` (for descending order).
 
-```{r owhverfechvpqajl, exercise = TRUE}
+```{r mostbirths, exercise = TRUE}
 present <- present %>%
   mutate(total = ___)
 
@@ -400,7 +400,7 @@ present %>%
 ```
 
 
-```{r owhverfechvpqajl-solution}
+```{r mostbirths-solution}
 # solution code
 present <- present %>%
   mutate(total = boys + girls)
@@ -409,7 +409,7 @@ present %>%
   arrange(desc(total))
 ```
 
-```{r owhverfechvpqajl-check}
+```{r mostbirths-check}
 # check code
 gradethis::grade_code()
 ```
@@ -424,7 +424,7 @@ learnrhash::encoder_logic()
 learnrhash::encoder_ui(
   ui_before = div(strong("Submit your hash in the form below."), br(), br()),
   ui_after  = learnrhash::iframe_ui(
-    src = "https://docs.google.com/forms/", ## change link, include name
+    src = "https://docs.google.com/forms/d/e/1FAIpQLSda78rAQWziQ-L6eDanGoDAhcfoi6JU_dg-c-6A9rrEXdvJwg/viewform", ## change link, include name
     width="900px", height= "1000px"
   )
 )
